--- a/blogapp/templates/blogapp/about.html
+++ b/blogapp/templates/blogapp/about.html
@@ -11,7 +11,7 @@
         <title>Django Djournal</title>
 
         <div class="page-header">
-            <h1><a href="{% url 'blogapp:display_index' %}">Django Djournal</a></h1>
+            <h1><a href="">Django Djournal</a></h1>
         </div>
 
         <div class="page-menu">
@@ -23,8 +23,8 @@
 
     <body>
         <div class="post-container">
-            <h3><a href="">{{ post.title }}</a></h3>
-            {{ post.content | safe }}<br>
+            <h3><a href="">About</a></h3>
+            
         </div>
     </body>
 </html>
