--- a/blogapp/templates/blogapp/archive.html
+++ b/blogapp/templates/blogapp/archive.html
@@ -11,7 +11,7 @@
         <title>Django Djournal</title>
 
         <div class="page-header">
-            <h1><a href="{% url 'blogapp:display_index' %}">Django Djournal</a></h1>
+            <h1><a href="">Django Djournal</a></h1>
         </div>
 
         <div class="page-menu">
@@ -23,8 +23,17 @@
 
     <body>
         <div class="post-container">
-            <h3><a href="">{{ post.title }}</a></h3>
-            {{ post.content | safe }}<br>
+            <h3><a href="">Archive</a></h3>
+            {% if post_list %}
+                <ul>
+                    {% for post in post_list %}
+                        <a href="{% url 'blogapp:display_post' post.url%}">{{ post.title }}</a>
+                        <br>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <p>No post available.</p>
+            {% endif %}
         </div>
     </body>
 </html>
